<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:paddingBottom="10dp"
	android:paddingTop="10dp"
	android:orientation="horizontal"
	android:gravity="center_horizontal"
	android:background="@android:color/darker_gray">
	<ImageButton
		android:id="@+id/painter_picker"
		android:layout_width="@dimen/icon_size"
		android:layout_height="@dimen/icon_size"
		android:src="@android:drawable/ic_menu_edit"
		android:layout_marginRight="10dp"
		android:contentDescription="@string/painter_picker_button_content_description"
		/>
	<ImageButton
		android:id="@+id/erase_picker"
		android:layout_width="@dimen/icon_size"
		android:layout_height="@dimen/icon_size"
		android:src="@android:drawable/ic_delete"
		android:layout_marginRight="10dp"
		android:contentDescription="@string/erase_picker_button_content_description"
		/>
	<ImageButton
		android:id="@+id/color_picker"
		android:layout_width="@dimen/icon_size"
		android:layout_height="@dimen/icon_size"
		android:layout_marginRight="10dp"
		android:contentDescription="@string/color_picker_button_content_description"
		/>
	<ImageButton
		android:tag="saveButton"
		android:layout_width="@dimen/icon_size"
		android:layout_height="@dimen/icon_size"
		android:src="@android:drawable/ic_menu_save"
		android:layout_marginRight="10dp"
		android:contentDescription="@string/save_button_content_description"
		/>
	<ImageButton
		android:tag="shareButton"
		android:layout_width="@dimen/icon_size"
		android:layout_height="@dimen/icon_size"
		android:src="@android:drawable/ic_menu_share"
		android:layout_marginRight="10dp"
		android:contentDescription="@string/share_button_content_description"
		/>
</LinearLayout>