<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:fillViewport="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/menu_background">

			<ImageView
				android:id="@+id/about_image"
				android:layout_width="match_parent"
				android:layout_height="120dp"
				android:layout_margin="35dp"
				android:src="@drawable/app_logo"
				android:contentDescription="@string/about_testfairy" />

			<TextView
				android:id="@+id/about_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:layout_below="@id/about_image"
				android:text="@string/about_text"
				android:gravity="center"
				android:textSize="@dimen/about_text_size"
				/>

			<Button
				android:id="@+id/send_feedback_button"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:layout_marginTop="20dp"
				android:text="@string/send_feedback_text"
				android:layout_below="@id/about_text"
				android:drawableLeft="@android:drawable/ic_menu_info_details"
				android:contentDescription="@string/about_app_content_description"
				/>

			<Button
				android:id="@+id/stop_send_feedback_button"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/stop_send_feedback_text"
				android:layout_below="@id/send_feedback_button"
				android:drawableLeft="@android:drawable/ic_menu_info_details"
				android:contentDescription="@string/about_app_content_description"
				/>

			<Button
				android:id="@+id/add_attibutes_button"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/add_attributes_text"
				android:layout_below="@id/stop_send_feedback_button"
				android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
				android:contentDescription="@string/add_attributes_content_description"
				/>

			<Button
				android:id="@+id/location_button"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/location_text"
				android:layout_below="@id/add_attibutes_button"
				android:drawableLeft="@android:drawable/ic_menu_mapmode"
				android:contentDescription="@string/add_attributes_content_description"
				/>

		</RelativeLayout>

</ScrollView>
