<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	      android:layout_width="match_parent"
	      android:layout_height="match_parent"
	      android:gravity="center"
	      android:orientation="horizontal">

	<Button
		android:id="@+id/small_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="Small"
		android:contentDescription="@string/small_brush_content_description"
		android:tag="0"/>

	<Button
		android:id="@+id/medium_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="Medium"
		android:contentDescription="@string/medium_brush_content_description"
		android:tag="1"/>

	<Button
		android:id="@+id/large_brush"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:text="Large"
		android:contentDescription="@string/large_brush_content_description"
		android:tag="2"/>

</LinearLayout>